package org.infnet_dr2_tp1.factory;

public class Book implements LibraryItem {
    private String title;
    private String author;
    private String isbn;
}
